# DevTriage

./: .gitignore  Cargo.toml  README.md
.superpowers/sdd/: task-4-report.md
crates/devtriage-cli/: Cargo.toml
crates/devtriage-cli/src/: main.rs
crates/devtriage-cli/tests/: cli.rs
crates/devtriage-core/: Cargo.toml
crates/devtriage-core/src/: compiler.rs  fingerprint.rs  graph.rs  lib.rs  model.rs  normalize.rs  pack.rs  pipeline.rs  redact.rs  universal.rs
crates/devtriage-core/tests/: model.rs  pipeline.rs
crates/devtriage-desktop/: Cargo.toml  tauri.conf.json
crates/devtriage-desktop/capabilities/: default.json
crates/devtriage-desktop/frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json
crates/devtriage-desktop/frontend/src/: App.test.tsx  App.tsx  Detail.test.tsx  Detail.tsx  api.ts  main.test.ts  main.tsx  styles.css
crates/devtriage-desktop/src/: commands.rs  domain.rs  lib.rs  main.rs  projects.rs  recent.rs
crates/devtriage-desktop/tests/: projects.rs  recent.rs  window_lifecycle.rs
docs/superpowers/plans/: 2026-07-03-devtriage-engine-foundation.md  2026-07-16-desktop-shell-project-association.md
docs/superpowers/specs/: 2026-07-03-devtriage-product-design.md  2026-07-16-desktop-shell-project-association-design.md
