[package]
name = "devtriage-desktop"
version.workspace = true
edition.workspace = true
build = "build.rs"

[build-dependencies]
tauri-build = "2.3"

[dependencies]
devtriage-core = { path = "../devtriage-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.8", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.3"
thiserror.workspace = true
