[package]
name = "devtriage-desktop"
version.workspace = true
edition.workspace = true
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
devtriage-core = { path = "../devtriage-core" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "=2.8.3", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.3"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
